tests/paczka1/fuzzy1/46863727.err
Error in line 1: 6v9MwjzJh A493 93,7
Error in line 10: 8q592m A896 23,2
Error in line 8: 6v9MwjzJh S288 92,8
Error in line 22: 1nRo5 A896 88,4
Error in line 29: S288 A493 81,0
Error in line 32: 1nRo5 A493 55,0
Error in line 33: S288 S288 61,3
